--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-      var clientId = '539770959648-n46rsdmggl2scgnnl1lo61dqut3e69qt.apps.googleusercontent.com';
-      var apiKey = 'AIzaSyBw5rYmVVhSo-HpnaMGbnpt9XNK6qxNGtI';
-      var scopes = 'https://www.googleapis.com/auth/gmail.readonly'+ 'https://www.googleapis.com/auth/gmail.send';
+
+      var scopes = 'https://www.googleapis.com/auth/gmail.readonly';
       function handleClientLoad() {
         gapi.client.setApiKey(apiKey);
         window.setTimeout(checkAuth, 1);
