--- a/index.html
+++ b/index.html
@@ -20,7 +20,44 @@
     <div class="container">
       <h1>Gmail API demo</h1>
 
-      <button id="authorize-button" class="btn btn-primary">Authorize</button>
+      <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
+      
+      <a href="#compose-modal"
+       data-toggle="modal"
+       id="compose-button"
+       class="btn btn-primary pull-right hidden">Compose</a>
+
+       <div class="modal fade" id="compose-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title">Compose</h4>
+            </div>
+            <form onsubmit="return sendEmail();">
+              <div class="modal-body">
+                <div class="form-group">
+                  <input type="email" class="form-control" id="compose-to" placeholder="To" required />
+                </div>
+
+                <div class="form-group">
+                  <input type="text" class="form-control" id="compose-subject" placeholder="Subject" required />
+                </div>
+
+                <div class="form-group">
+                  <textarea class="form-control" id="compose-message" placeholder="Message" rows="10" required></textarea>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" id="send-button" class="btn btn-primary">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
 
       <table class="table table-striped table-inbox hidden">
         <thead>
@@ -38,8 +75,9 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-
-      var scopes = 'https://www.googleapis.com/auth/gmail.readonly';
+      
+      var scopes =  'https://www.googleapis.com/auth/gmail.readonly '+
+      'https://www.googleapis.com/auth/gmail.send';
       function handleClientLoad() {
         gapi.client.setApiKey(apiKey);
         window.setTimeout(checkAuth, 1);
@@ -62,6 +100,7 @@
       function handleAuthResult(authResult) {
         if(authResult && !authResult.error) {
           loadGmailApi();
+          $('#compose-button').removeClass("hidden");
           $('#authorize-button').remove();
           $('.table-inbox').removeClass("hidden");
         } else {
@@ -170,6 +209,50 @@
         }
         return '';
       }
+      function sendEmail(){
+        $('#send-button').addClass('disabled');
+        sendMessage(
+          {
+            'To': $('#compose-to').val(),
+            'Subject': $('#compose-subject').val()
+          },
+          $('#compose-message').val(),
+          composeTidy
+        );
+        return false;
+      }
+
+      function sendMessage(headers_obj, message, callback)
+      {
+        var email = '';
+
+        for(var header in headers_obj)
+          email += header += ": "+headers_obj[header]+"\r\n";
+
+        email += "\r\n" + message;
+
+        var sendRequest = gapi.client.gmail.users.messages.send({
+          'userId': 'me',
+          'resource': {
+            'raw': window.btoa(email).replace(/\+/g, '-').replace(/\//g, '_')
+          }
+        });
+
+        return sendRequest.execute(callback);
+      }
+
+      function composeTidy()
+      {
+        $('#compose-modal').modal('hide');
+
+        $('#compose-to').val('');
+        $('#compose-subject').val('');
+        $('#compose-message').val('');
+
+        $('#send-button').removeClass('disabled');
+      }
+
+
     </script>
     <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   </body>
