--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Gmail API demo</title>
+    <title>My Webmail</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Gmail API demo</h1>
+      <h1>My Webmail</h1>
 
       <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
       
