--- a/index.html
+++ b/index.html
@@ -1,86 +1,24 @@
 <!doctype html>
 <html>
   <head>
-    <title>My Webmail</title>
     <meta charset="UTF-8">
-
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <style>
-      iframe {
-        width: 100%;
-        border: 0;
-        min-height: 80%;
-        height: 600px;
-        display: flex;
-      }
-    </style>
+    <title>Vmail</title>
+    <link rel="stylesheet" href="vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="vendor/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="container">
-      <h1>My Webmail</h1>
 
-      <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
-      
-      <a href="#compose-modal"
-       data-toggle="modal"
-       id="compose-button"
-       class="btn btn-primary pull-right hidden">Compose</a>
+    <!-- 3rd Party JS Libraries -->
+    <script src="vendor/jquery-2.2.3.min.js"></script>
+    <script src="vendor/bootstrap.min.js"></script>
+    <script src="vendor/angular.min.js"></script>
+    <script src="vendor/angular-ui-router.min.js"></script>
 
-       <div class="modal fade" id="compose-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-              <h4 class="modal-title">Compose</h4>
-            </div>
-            <form onsubmit="return sendEmail();">
-              <div class="modal-body">
-                <div class="form-group">
-                  <input type="email" class="form-control" id="compose-to" placeholder="To" required />
-                </div>
-
-                <div class="form-group">
-                  <input type="text" class="form-control" id="compose-subject" placeholder="Subject" required />
-                </div>
-
-                <div class="form-group">
-                  <textarea class="form-control" id="compose-message" placeholder="Message" rows="10" required></textarea>
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" id="send-button" class="btn btn-primary">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <table class="table table-striped table-inbox hidden">
-        <thead>
-          <tr>
-            <th>From</th>
-            <th>Subject</th>
-            <th>Date/Time</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript">
-
-    </script>
-     <script src="javascript/secrets.js"></script>
-     <script src="javascript/auth.js"></script>
-     <script src="javascript/send_email.js"></script>
-     <script src="javascript/get_email.js"></script>
+    <!-- Our JS Application Files -->
+    <script src="javascript/auth.js"></script>
+    <script src="javascript/send_email.js"></script>
+    <script src="javascript/get_email.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   </body>
 </html>
