--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="Vmail">
   <head>
     <meta charset="UTF-8">
     <title>Vmail</title>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-
+    <ui-view></ui-view>
     <!-- 3rd Party JS Libraries -->
     <script src="vendor/jquery-2.2.3.min.js"></script>
     <script src="vendor/bootstrap.min.js"></script>
@@ -16,9 +16,15 @@
     <script src="vendor/angular-ui-router.min.js"></script>
 
     <!-- Our JS Application Files -->
-    <script src="javascript/auth.js"></script>
+    <script src="app.js"></script>
+    <!-- Controllers -->
+    <script src="controllers/authController.js"></script>
+    <!-- Directives -->
+    <!-- Services -->
+
+    <!-- <script src="javascript/auth.js"></script>
     <script src="javascript/send_email.js"></script>
     <script src="javascript/get_email.js"></script>
-    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script> -->
   </body>
 </html>
