halfway to sent

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="controllers/globalController.js"></script>
     <script src="controllers/authController.js"></script>
     <script src="controllers/inboxController.js"></script>
+    <script src="controllers/sentController.js"></script>
     <!-- Directives -->
     <!-- Services -->
     <script src="services/authService.js"></script>
