inbox, sent, starred, drafts working

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src="controllers/authController.js"></script>
     <script src="controllers/inboxController.js"></script>
     <script src="controllers/sentController.js"></script>
+    <script src="controllers/starredController.js"></script>
+    <script src="controllers/draftController.js"></script>
     <!-- Directives -->
     <!-- Services -->
     <script src="services/authService.js"></script>
